# ParMooN2022

./: CMakeLists.txt  README.md
2DPrograms/: CD2D_AFC_Adaptive_ParMooN.C  CD2D_AFC_ParMooN.C  CD2D_Adaptive_ParMooN.C  CD2D_ParMooN.C  Darcy2D_ParMooN.C  NSE2D_Adaptive_ParMooN.C  NSE2D_ParMooN.C  TCD2D_ParMooN.C  TNSE2D_ParMooN.C  geo2mesh2d_ParMooN.C  mesh_ParMooN.C
3DPrograms/: CD3D_AFC_ParMooN.C  CD3D_ParMooN.C  Darcy3D_ParMooN.C  NSE3D_ParMooN.C  TCD3D_ParMooN.C  TNSE3D_ChannelTau.C  TNSE3D_ParMooN.C  mesh3d_ParMooN.C
cmake/: ParMooN_repository_info.cpp.in  additional_helper_targets.cmake  all_defines_external_libraries.h.in  create_standard_input_files.cpp  documentation_target.cmake  external_libraries.cmake  get_repository_information.cmake.in  install.cmake  main_programs.cmake  parmoon-config.cmake.in  sources_assembleroutines.cmake  sources_assembleroutinessaddle.cmake  sources_examples.cmake  sources_fe.cmake  sources_general.cmake  sources_geometry.cmake  sources_matrix.cmake  sources_multigrid.cmake  sources_parallel.cmake  sources_prePostprocessing.cmake  sources_quadformulas.cmake  sources_refinement.cmake  sources_rom.cmake  sources_solver.cmake  sources_system.cmake  sources_timediscroutines.cmake
cmake/Modules/: FindMUMPS.cmake  FindSCALAPACK.cmake
data/code_formatting/: _clang-format  astyle_preferences.options
data/input_files/: default_written_coefficient_function.Sol  u1.Sol  u2.Sol
data/mesh/: Hemker.PRM  Hemker_quad.mesh  Hemker_tria.mesh  Rectangle.PRM  ReferenceTetrahedron.mesh  ReferenceTetrahedron_bisec.mesh  Tshape.PRM  Tshape_meshCodina_coarse.mesh  UnitCube_TwoHexahedra.mesh  UnitCube_tilted.mesh  UnitSquare.PRM  UnitSquareWithSphericalInscribedRegion.mesh  UnitSquare_quad.mesh  UnitSquare_quads.mesh  UnitSquare_tria.GEO  UnitSquare_tria.mesh  block_1x2x3.mesh  channel.3d.mesh  cylinder.3d.3K.mesh  cylinder_short_18Ktetra.mesh  cylinder_short_surface.mesh  discacciati_11K.mesh  disk.PRM  disk.mesh  doubleRiverbed.PRM  doubleRiverbed.mesh  doubleRiverbed1.xGEO  doubleRiverbed3.mesh  geothermal2d.PRM  geothermal2d.mesh  rectangle_3x1.PRM  rectangle_3x1.mesh  ring.PRM  ring.mesh
documentation/: BuildMatrix_Hdiv.py  BuildMatrix_Hdiv2D.py  BuildMatrix_Hdiv3D.py  Doxyfile.in  automatic_code_formatting.dox  branching.dox  build_system.dox  code_analyzers.dox  geo_prm_files.dox  installing_petsc.dox  libraries.dox  python_script_paraview.dox  restart_sims.dox  rule_of_X.dox  rules_and_guidelines.dox  sandwich_grid.dox  testing.dox
documentation/images/: flow_around_cylinder_quads.eps  rectangle_riverbed1.eps  unitsquare_two_triangles.eps
documentation/scripts/: save_paraview_data.py
include/AssembleRoutines/: AddGadientJump.hpp  AlgebraicFluxCorrection.h  AlgebraicFluxCorrectionTCD.h  Assemble2D.h  Assemble3D.h  Assemble_DG.h  Assembler3.h  Assembler4.h  BoundaryAssembling2D.h  BoundaryAssembling3D.h  CD_local_assembling_routines.h  ConvDiff.h  ConvDiff2D.h  ConvDiff3D.h  DarcyMixed.h  Drop.h  Hotfixglobal_AssembleNSE.h  LocalAssembling.h  NSE2D_EquOrd_FixPo.h  NSE2D_FixPoRot.h  NSE2D_FixPoSkew.h  NSE2D_Friction_FixPo.h  NSE2D_Newton.h  NSE2D_Param.h  NSE3D_Param.h  PointwiseAssemblyData.h  TCD3D_Surface.h  Upwind.h  Upwind3D.h
include/AssembleRoutinesSaddle/: CommonRoutineTNSE3D.h  LPS_scott_zhang.h  NSE2DSUPG.h  NSE_local_assembling_routines.h  NonNewtonianViscosity.h  TNSE2DGalerkin.h  Time_NSE_local_assembling_routines.h  Variational_multiscale.h
include/Examples/: AnalyticalFunction.h  BoundaryCondition.h  BoundaryData.h  Example.h  Example2D.h  Example3D.h  Example_CD2D.h  Example_CD3D.h  Example_Darcy2D.h  Example_Darcy3D.h  Example_NSE2D.h  Example_NSE3D.h  Example_NonStationary.h  Example_NonStationary2D.h  Example_NonStationary3D.h  Example_Output.h  Example_TimeCD2D.h  Example_TimeCD3D.h  Example_TimeNSE2D.h  Example_TimeNSE3D.h  PDECoefficients.h
include/FE/: AllBaseFunctions2D.h  AllBaseFunctions3D.h  AllFEDescs2D.h  AllFEDescs3D.h  AllNodalFunctionals2D.h  AllNodalFunctionals3D.h  AllRefTrans.h  AuxParam2D.h  AuxParam3D.h  BaseFunctions.h  CDErrorEstimator.h  CDErrorEstimator_AFC.h  CheckpointIO.h  DataWriter.h  Enumerations_fe.h  FE2DMapper1Reg.h  FE3DMapper1Reg.h  FEDatabase.h  FEDescriptor.h  FEFunction1D.h  FEFunction2D.h  FEFunction3D.h  FEMapper.h  FEMapperDatabase.h  FESpace.h  FESpace1D.h  FESpace2D.h  FESpace3D.h  FEVectFunct1D.h  FEVectFunct2D.h  FEVectFunct3D.h  FiniteElement.h  HNDesc.h  HN_C_P1_2D.h  HN_C_P2_2D.h  HN_C_P3_2D.h  HN_N_P1_2D.h  HangingNode.h  HexaAffin.h  HexaIsoparametric.h  (+17 more)
include/FE1D/: BF_C_L_P0_1D.h  BF_C_L_P1_1D.h  BF_C_L_P2_1D.h  BF_C_L_P3_1D.h  BF_D_L_P1_1D.h  BF_D_L_P2_1D.h  FE_C_L_P0_1D.h  FE_C_L_P1_1D.h  FE_C_L_P2_1D.h  FE_C_L_P3_1D.h  FE_D_L_P1_1D.h  FE_D_L_P2_1D.h  FE_N_L_P0_1D.h  NF_C_L_P0_1D.h  NF_C_L_P1_1D.h  NF_C_L_P2_1D.h  NF_C_L_P3_1D.h  NF_D_L_P1_1D.h  NF_D_L_P2_1D.h
include/FE2D/: BF_B_Q_IB2_2D.h  BF_C_Q_EL1_2D.h  BF_C_Q_M2_2D.h  BF_C_Q_M3_2D.h  BF_C_Q_M4_2D.h  BF_C_Q_M5_2D.h  BF_C_Q_M6_2D.h  BF_C_Q_M7_2D.h  BF_C_Q_M8_2D.h  BF_C_Q_M9_2D.h  BF_C_Q_Q00_2D.h  BF_C_Q_Q0_2D.h  BF_C_Q_Q1_2D.h  BF_C_Q_Q2_2D.h  BF_C_Q_Q3_2D.h  BF_C_Q_Q4_2D.h  BF_C_Q_Q5_2D.h  BF_C_Q_Q6_2D.h  (+292 more)
test/: CMakeLists.txt  Hdiv_element_test.c++  adaptive_hanging_test.c++  analytical_function_test.c++  block_fe_matrix_test.c++  block_matrix_test.c++  block_vector_test.c++  boundary_condition_test.c++  boundary_data_test.c++  brinkman2d_test.c++  cd2d_adaptive_test.c++  cd2d_afc_adaptive_test.c++  cd2d_afc_test.c++  cd2d_slope_limiter_test.c++  cd2d_test.c++  cd3d_afc_test.c++  cd3d_solvers_test.c++  cd_dg_test.c++  collection_test.c++  darcy_test.c++  dense_matrix_test.c++  derived_system_class_test.c++  direct_solver_test.c++  domain_partitioning_read_write_test.c++  fe_function_test.c++  function_evaluation_test.c++  iterative_solver_test.c++  linesEval_test.c++  lsc_test.c++  matrix_test.c++  mesh3d_test.c++  multigrid_test.c++  mumps_test_1.c++  mumps_test_2.c++  mumps_wrapper_test.c++  nse2d_dg_test.c++  nse2d_supg_test.c++  nse2d_test.c++  nse3d_solvers_test.c++  parameter_database_test.c++  (+15 more)
(+853 files in other folders)
